# stm32bluepill_blinky

./: CMakeLists.txt  README.md
linker/: linker.ld
src/: main.c  startup.c
